--- a/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
+++ b/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
@@ -82,16 +82,17 @@
 
     <br><br>
     <div class="row ">
-        <table mat-table [dataSource]="dataSourceRefFreqLang" class="mat-elevation-z8 col-md-6 offset-md-3">
+        <table mat-table  #sortRefFreq="matSort" [dataSource]="dataSourceRefFreqLang" matSort matSortActive="name" matSortDirection="asc"
+        class="mat-elevation-z8 col-md-6 offset-md-3">
             <!-- Name Column -->
             <ng-container mat-text-column="end" matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">{{element.name}}</td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="value">
-                <th mat-header-cell *matHeaderCellDef>Index of Coincidence</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Index of Coincidence</th>
                 <td mat-cell *matCellDef="let element">{{element.value}}</td>
             </ng-container>
 
@@ -101,27 +102,27 @@
     </div>
     <br><br>
 
-    <div class="row ">
-        <table mat-table [dataSource]="dataSourceCalcFreqLang"
+    <div class="row scrollTable">
+        <table mat-table  #sortCalcFreq="matSort"  [dataSource]="dataSourceCalcFreqLang" matSort matSortActive="sum" matSortDirection="desc"
             class=" example-container mat-elevation-z8 col-md-6 offset-md-3">
 
             <ng-container matColumnDef="shift">
-                <th mat-header-cell *matHeaderCellDef>Shift</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Shift</th>
                 <td mat-cell *matCellDef="let element">{{element.shift}}</td>
             </ng-container>
             <ng-template ngFor let-item [ngForOf]="alphabet">
                 <ng-container mat-text-column="end" [matColumnDef]="item">
-                    <th mat-header-cell *matHeaderCellDef>{{item}}</th>
+                    <th mat-header-cell *matHeaderCellDef >{{item}}</th>
                     <td mat-cell *matCellDef="let element">{{element[item]}}</td>
                 </ng-container>
             </ng-template>
 
             <ng-container matColumnDef="sum">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Sum</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header >Sum</th>
                 <td mat-cell *matCellDef="let element">{{element.sum}}</td>
             </ng-container>
-            <tr mat-header-row *matHeaderRowDef="columnsCalcFreqLanguage ; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnsCalcFreqLanguage; "></tr>
+            <tr mat-header-row *matHeaderRowDef="columnsCalcFreqLanguage; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsCalcFreqLanguage; let i = index " ></tr>
         </table>
     </div>
 
@@ -129,7 +130,7 @@
     <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsCompareFreq" [(update)]="updateFlagCompareFreq"
         style="width: 100%; height: 400px; display: block;"></highcharts-chart>
 
-    <mat-button-toggle-group [(value)]="selectedValue" #group="matButtonToggleGroup">
+    <mat-button-toggle-group [(ngModel)]="selectedValue" #group="matButtonToggleGroup">
         <mat-button-toggle *ngFor="let item of toggleOptions;" (change)="selectionOfGraphChanged($event)"
             [value]="item">
             {{item}}</mat-button-toggle>
