--- a/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.scss
+++ b/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.scss
@@ -1,8 +1,11 @@
-.example-container {
-    height: 400px;
-    overflow: auto;
-  }
-  
-  table {
+table {
     width: 100%;
   }
+.scrollTable{
+  height: 400px;
+  overflow: auto;
+}
+
+.highlight-blue{
+  background-color: azure;
+}
