Added implementation of Polyalphabetic Cipher

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,9 @@
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
           <a routerLink="/transpositioncipher">Transposition Cipher</a>
         </li>
+        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+          <a routerLink="/polyalphcipher">Polyalphabetic Cipher</a>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
