--- a/src/app/polyalphabetic-cipher/polyalphabetic-cipher-enc-dec/polyalphCipherEncDec.component.html
+++ b/src/app/polyalphabetic-cipher/polyalphabetic-cipher-enc-dec/polyalphCipherEncDec.component.html
@@ -133,6 +133,11 @@
 
                     <mat-step>
                         <ng-template matStepLabel>Compute all combinations for key</ng-template>
+                        <div class="col-md-12">
+                            <p *ngFor= "let result of best10Results">
+                                Key: {{result.key}} , Frequency: {{result.sum}} , Decrypted Text: {{result.decryptedText| slice:0:30}}...
+                            </p>
+                        </div>
                     </mat-step>
 
                 </mat-vertical-stepper>
