--- a/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
+++ b/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
@@ -140,23 +140,9 @@
                             <br><br>
 
                             <br><br>
-                            <table mat-table #sortRefFreq="matSort" [dataSource]="dataSourceRefFreqLang" matSort
-                                matSortActive="name" matSortDirection="asc" class="mat-elevation-z8">
-                                <!-- Name Column -->
-                                <ng-container mat-text-column="end" matColumnDef="name">
-                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                                    <td mat-cell *matCellDef="let element">{{element.name}}</td>
-                                </ng-container>
-
-                                <!-- Weight Column -->
-                                <ng-container matColumnDef="value">
-                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Index of Coincidence</th>
-                                    <td mat-cell *matCellDef="let element">{{element.value}}</td>
-                                </ng-container>
-
-                                <tr mat-header-row *matHeaderRowDef="columnsRefFreqLanguage"></tr>
-                                <tr mat-row *matRowDef="let row; columns: columnsRefFreqLanguage; "></tr>
-                            </table>
+                            <app-table [columnNames]="columnsRefFreqLanguage" [dataSource]="dataSourceRefFreqLang"
+                                [defaultSort]="sortRefFreqLang">
+                            </app-table>
                         </div>
                         <br><br>
                     </div>
@@ -166,29 +152,9 @@
                     <span>Based of minimum frequency for shift, we guess shift</span>
 
                     <div class="row scrollTable">
-                        <table mat-table #sortCalcFreq="matSort" [dataSource]="dataSourceCalcFreqLang" matSort
-                            matSortActive="sum" matSortDirection="asc"
-                            class=" example-container mat-elevation-z8 col-md-6 offset-md-3">
-
-                            <ng-container matColumnDef="shift">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Shift</th>
-                                <td mat-cell *matCellDef="let element">{{element.shift}}</td>
-                            </ng-container>
-                            <ng-template ngFor let-item [ngForOf]="alphabet">
-                                <ng-container mat-text-column="end" [matColumnDef]="item">
-                                    <th mat-header-cell *matHeaderCellDef>{{item}}</th>
-                                    <td mat-cell *matCellDef="let element">{{element[item]}}</td>
-                                </ng-container>
-                            </ng-template>
-
-                            <ng-container matColumnDef="sum">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Sum</th>
-                                <td mat-cell *matCellDef="let element">{{element.sum}}</td>
-                            </ng-container>
-                            <tr mat-header-row *matHeaderRowDef="columnsCalcFreqLanguage; sticky: true"></tr>
-                            <tr mat-row *matRowDef="let row; columns: columnsCalcFreqLanguage; let i = index ">
-                            </tr>
-                        </table>
+                        <app-table [columnNames]="columnsCalcFreqLanguage" [dataSource]="dataSourceCalcFreqLang"
+                            [defaultSort]="sortCalcFreqLang">
+                        </app-table>
                     </div>
                     <div>
                         <button mat-button matStepperPrevious>Back</button>
