Fixed changing of data after selection

--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,5 +1,5 @@
 <div class="row">
     <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsFreqGraph"
-        [(update)]="updateFlagFreqGraph">
+        [(update)]="updateState" >
     </highcharts-chart>
 </div>
