--- a/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
+++ b/src/app/caesar-cipher/caesar-cipher-enc-dec/caesarCipher.component.html
@@ -88,7 +88,7 @@
                                     Frequency</button>
                             </div> -->
                     <div class="container">
-                        <app-graph [chartOptionsFreqGraph]="chartOptionsFreqGraph" [updateFlagFreqGraph]="updateFlagFreqGraph"></app-graph>   
+                        <app-graph [chartOptionsFreqGraph]="chartOptionsFreqGraph"></app-graph>   
                     </div>
                     <br>
                     <br>
@@ -170,7 +170,7 @@
                             <!-- <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsCompareFreq"
                                 [(update)]="updateFlagCompareFreq">
                             </highcharts-chart> -->
-                            <app-graph [chartOptionsFreqGraph]="chartOptionsCompareFreq" [updateFlagFreqGraph]="updateFlagCompareFreq"></app-graph>   
+                            <app-graph #freqGraph [chartOptionsFreqGraph]="chartOptionsCompareFreq"  [data]="dataSource"></app-graph>   
                         </div>
                     </div>
 
