Refactor code for PolyAlph C.
Created service and file for constants

--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -36,7 +36,7 @@
             <button
               mat-stroked-button
               color="primary"
-              (click)="enDeCryptMessage()"
+              (click)="calcDataForPage()"
             >
               En/Decrypt Text
             </button>
@@ -177,6 +177,7 @@
                 [columnNames]="columnsBestResults"
                 [dataSource]="dataSourceBestResults"
                 [defaultSort]="sortBestResults"
+                [ready]="dataSourceBestResultsReady"
               >
               </app-table>
             </div>
