Created Component for Boxes

--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -95,6 +95,11 @@
               </div>
             </div>
             <br />
+
+
+            <app-polyalph-boxes-component></app-polyalph-boxes-component>
+
+
             <div class="container text-center col-md-12">
               <b>Choose length of key</b>
               <br /><br />
