--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -96,81 +96,13 @@
             </div>
             <br />
 
-
-            <app-polyalph-boxes-component></app-polyalph-boxes-component>
-
-
-            <div class="container text-center col-md-12">
-              <b>Choose length of key</b>
-              <br /><br />
-              <div class="row ">
-                <mat-button-toggle-group [(ngModel)]="selectedValue">
-                  <mat-button-toggle
-                    *ngFor="let item of toggleOptions"
-                    (change)="selectionOfGraphChanged($event)"
-                    [value]="item"
-                  >
-                    {{ item }}
-                  </mat-button-toggle>
-                </mat-button-toggle-group>
-
-                <br />
-                <div class="container">
-                  <div class="row ">
-                    <div class="col-md-11">
-                      <div
-                        *ngIf="passedMinIc; else notPassed"
-                        class="alert alert-danger"
-                        role="alert"
-                      >
-                        <strong>Input text is not from language</strong>
-                        <br />
-                        <span
-                          >Avarage Index of coincidence for all boxes is:
-                          {{ ic.value | number: "1.0-4" }}</span
-                        >
-                        <br />
-                      </div>
-                      <ng-template #notPassed>
-                        <div class="alert alert-success" role="alert">
-                          <span
-                            >Avarage Index of coincidence for all boxes is:
-                            {{ ic.value | number: "1.0-4" }}</span
-                          >
-                          <br />
-                        </div>
-                      </ng-template>
-                      <br /><br />
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div
-                    class="col-md-3 col-sm-3 box"
-                    *ngFor="
-                      let box of allBoxes[selectedValue - 2];
-                      let j = index
-                    "
-                  >
-                    <mat-card>
-                      <mat-card-header>
-                        <mat-card-title>Box {{ j + 1 }}</mat-card-title>
-                      </mat-card-header>
-                      <mat-card-content style="word-wrap: break-word;">
-                        <span [style.color]="colors[j % selectedValue]">
-                          {{ box }}
-                        </span>
-                      </mat-card-content>
-                      <mat-card-actions>
-                        IC for box is:
-                        {{ allBoxesIc[selectedValue - 2][j] | number: "1.0-4" }}
-                      </mat-card-actions>
-                    </mat-card>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <app-polyalph-boxes-component
+              [allBoxesAvgIc]="allBoxesAvgIc"
+              [ic]="ic"
+              [allBoxes]="allBoxes"
+              [allBoxesIc]="allBoxesIc"
+              [toggleOptions]="toggleOptions"
+            ></app-polyalph-boxes-component>
           </mat-step>
 
           <mat-step>
