--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,9 @@
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
           <a routerLink="/polyalphcipher">Polyalphabetic Cipher</a>
         </li>
+        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+          <a routerLink="/monoalphcipher">Monoalphabetic Cipher</a>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
